feat: implement SEO, performance, and accessibility metrics extraction engine with supporting models and services